--- a/packages/ui/locales/en/component.json
+++ b/packages/ui/locales/en/component.json
@@ -44,6 +44,7 @@
     "customNav": "Customize navigation",
     "administration": "Administration",
     "logout": "Log out",
+    "signin": "Sign in",
     "pin": "Pin",
     "remove": "Remove",
     "reorder": "Reorder",
