--- a/packages/ui/locales/es/component.json
+++ b/packages/ui/locales/es/component.json
@@ -44,6 +44,7 @@
     "customNav": "Customize navigation",
     "administration": "Administration",
     "logout": "Log out",
+    "signin": "Sign in",
     "pin": "",
     "remove": "",
     "reorder": "",
