--- a/packages/ui/locales/fr/component.json
+++ b/packages/ui/locales/fr/component.json
@@ -44,6 +44,7 @@
     "customNav": "Personnaliser la navigation",
     "administration": "Administration",
     "logout": "Se déconnecter",
+    "signin": "Sign in",
     "pin": "Épingler",
     "remove": "Supprimer",
     "reorder": "Réorganiser",
